finalizaçao do menu principal

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -62,3 +62,6 @@ $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
 $font-weight-extra-bold: 800;
 $font-weight-black: 900;
+
+//navbar
+$navbar-toggler-focus-width:        0;
