--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -1,6 +1,71 @@
-#main-menu .nav-item{
-  border-bottom: 1px solid transparent;
-  &:hover {
-    border-bottom: 1px solid $black-2;
+#main-menu {
+
+  .social-media {
+    display: inline-flex;
+  }
+
+  button.collapsed #menu-toggler {
+    position: relative;
+    margin: 16px 0;
+    width: 50px;
+    height: 4px;
+    background: #FFF;
+    &::after, &::before {
+      content: '';
+      display: block;
+      width: 50px;
+      height: 4px;
+      position: absolute;
+      top: -11px;
+      background: #FFF;
+      transform: rotate(0deg);
+    }
+    &::after {
+      top: 11px;
+    }
+  }
+
+  button #menu-toggler {
+    position: relative;
+    margin: 16px 0;
+    width: 50px;
+    height: 4px;
+    &::after, &::before {
+      content: '';
+      display: block;
+      width: 50px;
+      height: 4px;
+      position: absolute;
+      top: 0;
+      background: #FFF;
+      transform: rotate(45deg);
+      transition: all 0.2s ease;
+    }
+    &::after {
+      top: 0;
+      transform: rotate(-45deg);
+    }
+    transition: all 0.2s ease-in;
+  }
+
+  .border-hover {
+    border-bottom: 1px solid transparent;
+    &:hover {
+      border-bottom: 1px solid $black-2;
+    }
+    &.is-active {
+      border-bottom: 1px solid $black-2;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  #main-menu {
+    .navbar-brand {
+      max-width: 200px;
+    }
+    .social-media {
+      display: none;
+    }
   }
 }
