--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,31 +1,31 @@
 // color variables definition
-$black: #222;
-$black-2: #1F2937;
-$aco: #273444;
-$yellow: #F59E0B;
-// $prata: #3c4858;
-// $gray: #8a9399;
-// $fumaca: #e0e6ed;
-// $fumaca-dark: #d3dce6;
-// $fumaca-extra-dark: #c0ccda;
-// $neve: #f9fafc;
-// $neve-dark: #eff2f7;
-// $neve-extra-dark: #e5e9f2;
+$black:     #222;
+$black-2:   #1F2937;
+$black-3:   #374151;
+$black-4:   #6D6E71;
+$black-5:   #6B7280;
+$black-6:   #9CA3AF;
+$blue:      #3655B3;
+$blue-2:    #233673;
+$blue-3:    #1F3066;
+$yellow:    #F59E0B;
+$yellow-2:  #F2C94C;
+$orange:    #EF5F53;
+$white:     #FFF;
 
 $theme-colors: (
   "black": $black,
   "black-2": $black-2,
-  "aco": $aco,
+  "black-3": $black-3,
+  "black-4": $black-4,
+  "black-5": $black-5,
+  "black-6": $black-6,
+  "blue": $blue,
+  "blue-2": $blue-2,
+  "blue-3": $blue-3,
   "yellow": $yellow,
-  // "prata": $prata,
-  // "gray": $gray,
-  // "fumaca": $fumaca,
-  // "fumaca-dark": $fumaca-dark,
-  // "fumaca-extra-dark": $fumaca-extra-dark,
-  // "neve": $neve,
-  // "neve-dark": $neve-dark,
-  // "neve-extra-dark": $neve-extra-dark,
-  // "transparent": #fff0,
+  "yellow-2": $yellow-2,
+  "orange": $orange,
 ) !default;
 
 // spacers variable definition
@@ -33,6 +33,8 @@ $spacer: 1rem;
 $custom-spacers: (
   "awe-6": $spacer * 0.375,
   "awe-12": $spacer * 0.75,
+  "awe-16": $spacer,
+  "awe-22": $spacer * 1.375,
   "awe-32": $spacer * 2,
   "awe-40": $spacer * 2.5,
   "awe-56": $spacer * 3.5,
@@ -40,6 +42,7 @@ $custom-spacers: (
   "awe-80": $spacer * 5,
   "awe-96": $spacer * 6,
   "awe-108": $spacer * 8,
+  "awe-150": $spacer * 9.375,
   "awe-324": $spacer * 24,
 ) !default;
 
@@ -48,8 +51,11 @@ $font-sizes: (
   14: 14px,
   16: 16px,
   18: 18px,
+  20: 20px,
   21: 21px,
+  24: 24px,
   26: 26px,
+  32: 36px,
   44: 44px,
 );
 
@@ -65,3 +71,12 @@ $font-weight-black: 900;
 
 //navbar
 $navbar-toggler-focus-width:        0;
+
+//buttons
+$btn-box-shadow:  0;
+$btn-focus-width: 0;
+$btn-focus-box-shadow:        0;
+$btn-padding-y:               0.8em;
+$btn-padding-x:               2em;
+$btn-border-radius:           5px;
+$btn-border-width:            0;
