--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,75 @@
 @import 'bootstrap';
 @import 'components';
+
+//geral
+.container {
+  padding: 0 32px 0 32px;
+}
+
+//fontes
+.ff-ubuntu {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.ff-open-sans {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.ff-nunito {
+  font-family: 'Nunito', sans-serif;
+}
+
+#main-home {
+  background: url(/dist/img/background-main.jpg) no-repeat top right;
+  background-size: cover;
+  &>div {
+    padding: 180px 0 136px 0;
+    background: linear-gradient(270deg, rgba(33, 184, 217, 0) 0%, #063266 100%);
+  }
+}
+
+#introducao-catalogo {
+  background: #F7F9FF;
+}
+
+#catalogo {
+  h4::before {
+    content: '';
+    display: block;
+    background: $blue;
+    width: 27px;
+    height: 11px;
+    border-radius: 2px;
+    position: absolute;
+    top: 9px;
+    left: 0;
+  }
+}
+
+#duvidas {
+  background: linear-gradient(90deg, #FC4A1A 0%, #F7B733 100%);
+
+  .gotas::before {
+    content: '';
+    display: block;
+    width: 317px;
+    height: 239px;
+    background: url(/dist/img/gotas.png);
+    position: absolute;
+    left: -270px;
+  }
+}
+
+#sobre {
+  .emphasis {
+    color: $blue-2;
+    font-weight: bold;
+    background: url(/dist/img/svg/waves.svg) no-repeat bottom;
+    padding: 2px 8px;
+  }
+}
+
+#orcamento {
+  background: #F7F9FF;
+  padding: 80px 0 90px 0;
+}
