finalizaçao parcial da seçao de catalogo

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,4 +1,4 @@
 @import 'components/menu';
 @import 'components/buttons';
-@import 'components/card-modelos';
 @import 'components/forms';
+@import 'components/carousels';
