tornando a seção 'duvidas' fixa ao rolar a página

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -107,6 +107,22 @@
     position: absolute;
     left: -270px;
   }
+
+  .duvidas-fixo {
+    display: block;
+  }
+  .duvidas-sticky {
+    display: none;
+  }
+
+  &.sticky-top {
+    .duvidas-fixo {
+      display: none;
+    }
+    .duvidas-sticky {
+      display: block;
+    }
+  }
 }
 
 //Orçamento
