--- a/style-update.css
+++ b/style-update.css
@@ -20,3 +20,27 @@
 .sobre-nos a {
   color: #ef5f53;
 }
+
+#orcamento form br {
+  display: none;
+}
+
+#orcamento form p {
+  margin: 0;
+  padding: 0;
+}
+
+#orcamento input[type="submit"] {
+  background: linear-gradient(90deg, #ef5f53 0%, #fa8f70 100%);
+  box-shadow: 0px 5px 5px -25px rgba(80, 64, 128, 0.15);
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  padding: 1em 2em;
+  display: block;
+  width: 100%;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 16px;
+}
